--- a/libraries/pcs/pcs-docs/sun134.tex
+++ b/libraries/pcs/pcs-docs/sun134.tex
@@ -1,32 +1,27 @@
-\documentclass[twoside,11pt]{article}
+\documentclass[twoside,11pt,nolof]{starlink}
 
 % ? Specify used packages
-% \usepackage{graphicx}        %  Use this one for final production.
-% \usepackage[draft]{graphicx} %  Use this one for drafting.
 % ? End of specify used packages
-
-\pagestyle{myheadings}
 
 % -----------------------------------------------------------------------------
 % ? Document identification
 % Fixed part
-\newcommand{\stardoccategory}  {Starlink User Note}
-\newcommand{\stardocinitials}  {SUN}
-\newcommand{\stardocsource}    {sun\stardocnumber}
-\newcommand{\stardoccopyright}
+\stardoccategory    {Starlink User Note}
+\stardocinitials    {SUN}
+\stardocsource      {sun\stardocnumber}
+\stardoccopyright
 {Copyright \copyright\ 2000 Council for the Central Laboratory of the Research Councils}
 
 % Variable part - replace [xxx] as appropriate.
-\newcommand{\stardocnumber}    {134.3}
-\newcommand{\stardocauthors}   {B D Kelly\footnote{Royal Observatory
+\stardocnumber      {134.3}
+\stardocauthors   {B D Kelly\footnote{Royal Observatory
 Edinburgh}\\A J Chipperfield}
-\newcommand{\stardocdate}      {30 March 1992}
-\newcommand{\stardoctitle}     {ADAM\\[2ex]
+\stardocdate        {30 March 1992}
+\stardoctitle    {ADAM\\[2ex]
                                 Guide to Writing Instrumentation Tasks}
 
-\newcommand{\stardocversion}   {}
-\newcommand{\stardocmanual}    {Programmer's Manual}
-\newcommand{\stardocabstract}  {
+\stardocmanual      {Programmer's Manual}
+\stardocabstract  {
 This guide shows you how to write programs for use as part of
 instrumentation systems under ADAM Version 2. If you are a programmer
 experienced with ADAM Version 1, then refer to Appendix \ref{old} which
@@ -35,265 +30,14 @@ and the old one.
 }
 % ? End of document identification
 % -----------------------------------------------------------------------------
-
-% +
-%  Name:
-%     sun.tex
-%
-%  Purpose:
-%     Template for Starlink User Note (SUN) documents.
-%     Refer to SUN/199
-%
-%  Authors:
-%     AJC: A.J.Chipperfield (Starlink, RAL)
-%     BLY: M.J.Bly (Starlink, RAL)
-%     PWD: Peter W. Draper (Starlink, Durham University)
-%
-%  History:
-%     17-JAN-1996 (AJC):
-%        Original with hypertext macros, based on MDL plain originals.
-%     16-JUN-1997 (BLY):
-%        Adapted for LaTeX2e.
-%        Added picture commands.
-%     13-AUG-1998 (PWD):
-%        Converted for use with LaTeX2HTML version 98.2 and
-%        Star2HTML version 1.3.
-%      1-FEB-2000 (AJC):
-%        Add Copyright statement in LaTeX
-%     {Add further history here}
-%
-% -
-
-\newcommand{\stardocname}{\stardocinitials /\stardocnumber}
-\markboth{\stardocname}{\stardocname}
-\setlength{\textwidth}{160mm}
-\setlength{\textheight}{230mm}
-\setlength{\topmargin}{-2mm}
-\setlength{\oddsidemargin}{0mm}
-\setlength{\evensidemargin}{0mm}
-\setlength{\parindent}{0mm}
-\setlength{\parskip}{\medskipamount}
-\setlength{\unitlength}{1mm}
-
-% -----------------------------------------------------------------------------
-%  Hypertext definitions.
-%  ======================
-%  These are used by the LaTeX2HTML translator in conjunction with star2html.
-
-%  Comment.sty: version 2.0, 19 June 1992
-%  Selectively in/exclude pieces of text.
-%
-%  Author
-%    Victor Eijkhout                                      <eijkhout@cs.utk.edu>
-%    Department of Computer Science
-%    University Tennessee at Knoxville
-%    104 Ayres Hall
-%    Knoxville, TN 37996
-%    USA
-
-%  Do not remove the %begin{latexonly} and %end{latexonly} lines (used by
-%  LaTeX2HTML to signify text it shouldn't process).
-%begin{latexonly}
-\makeatletter
-\def\makeinnocent#1{\catcode`#1=12 }
-\def\csarg#1#2{\expandafter#1\csname#2\endcsname}
-
-\def\ThrowAwayComment#1{\begingroup
-    \def\CurrentComment{#1}%
-    \let\do\makeinnocent \dospecials
-    \makeinnocent\^^L% and whatever other special cases
-    \endlinechar`\^^M \catcode`\^^M=12 \xComment}
-{\catcode`\^^M=12 \endlinechar=-1 %
- \gdef\xComment#1^^M{\def\test{#1}
-      \csarg\ifx{PlainEnd\CurrentComment Test}\test
-          \let\html@next\endgroup
-      \else \csarg\ifx{LaLaEnd\CurrentComment Test}\test
-            \edef\html@next{\endgroup\noexpand\end{\CurrentComment}}
-      \else \let\html@next\xComment
-      \fi \fi \html@next}
-}
-\makeatother
-
-\def\includecomment
- #1{\expandafter\def\csname#1\endcsname{}%
-    \expandafter\def\csname end#1\endcsname{}}
-\def\excludecomment
- #1{\expandafter\def\csname#1\endcsname{\ThrowAwayComment{#1}}%
-    {\escapechar=-1\relax
-     \csarg\xdef{PlainEnd#1Test}{\string\\end#1}%
-     \csarg\xdef{LaLaEnd#1Test}{\string\\end\string\{#1\string\}}%
-    }}
-
-%  Define environments that ignore their contents.
-\excludecomment{comment}
-\excludecomment{rawhtml}
-\excludecomment{htmlonly}
-
-%  Hypertext commands etc. This is a condensed version of the html.sty
-%  file supplied with LaTeX2HTML by: Nikos Drakos <nikos@cbl.leeds.ac.uk> &
-%  Jelle van Zeijl <jvzeijl@isou17.estec.esa.nl>. The LaTeX2HTML documentation
-%  should be consulted about all commands (and the environments defined above)
-%  except \xref and \xlabel which are Starlink specific.
-
-\newcommand{\htmladdnormallinkfoot}[2]{#1\footnote{#2}}
-\newcommand{\htmladdnormallink}[2]{#1}
-\newcommand{\htmladdimg}[1]{}
-\newcommand{\hyperref}[4]{#2\ref{#4}#3}
-\newcommand{\htmlref}[2]{#1}
-\newcommand{\htmlimage}[1]{}
-\newcommand{\htmladdtonavigation}[1]{}
-
-\newenvironment{latexonly}{}{}
-\newcommand{\latex}[1]{#1}
-\newcommand{\html}[1]{}
-\newcommand{\latexhtml}[2]{#1}
-\newcommand{\HTMLcode}[2][]{}
-
-%  Starlink cross-references and labels.
-\newcommand{\xref}[3]{#1}
-\newcommand{\xlabel}[1]{}
-
-%  LaTeX2HTML symbol.
-\newcommand{\latextohtml}{\LaTeX2\texttt{HTML}}
-
-%  Define command to re-centre underscore for Latex and leave as normal
-%  for HTML (severe problems with \_ in tabbing environments and \_\_
-%  generally otherwise).
-\renewcommand{\_}{\texttt{\symbol{95}}}
-
-% -----------------------------------------------------------------------------
-%  Debugging.
-%  =========
-%  Remove % on the following to debug links in the HTML version using Latex.
-
-% \newcommand{\hotlink}[2]{\fbox{\begin{tabular}[t]{@{}c@{}}#1\\\hline{\footnotesize #2}\end{tabular}}}
-% \renewcommand{\htmladdnormallinkfoot}[2]{\hotlink{#1}{#2}}
-% \renewcommand{\htmladdnormallink}[2]{\hotlink{#1}{#2}}
-% \renewcommand{\hyperref}[4]{\hotlink{#1}{\S\ref{#4}}}
-% \renewcommand{\htmlref}[2]{\hotlink{#1}{\S\ref{#2}}}
-% \renewcommand{\xref}[3]{\hotlink{#1}{#2 -- #3}}
-%end{latexonly}
-% -----------------------------------------------------------------------------
-% ? Document specific \newcommand or \newenvironment commands.
+% ? Document specific \providecommand or \newenvironment commands.
 % ? End of document specific commands
 % -----------------------------------------------------------------------------
 %  Title Page.
 %  ===========
-\renewcommand{\thepage}{\roman{page}}
 \begin{document}
-\thispagestyle{empty}
+\scfrontmatter
 
-%  Latex document header.
-%  ======================
-\begin{latexonly}
-   CCLRC / \textsc{Rutherford Appleton Laboratory} \hfill \textbf{\stardocname}\\
-   {\large Particle Physics \& Astronomy Research Council}\\
-   {\large Starlink Project\\}
-   {\large \stardoccategory\ \stardocnumber}
-   \begin{flushright}
-   \stardocauthors\\
-   \stardocdate
-   \end{flushright}
-   \vspace{-4mm}
-   \rule{\textwidth}{0.5mm}
-   \vspace{5mm}
-   \begin{center}
-   {\Huge\textbf{\stardoctitle \\ [2.5ex]}}
-   {\LARGE\textbf{\stardocversion \\ [4ex]}}
-   {\Huge\textbf{\stardocmanual}}
-   \end{center}
-   \vspace{5mm}
-
-% ? Add picture here if required for the LaTeX version.
-%   e.g. \includegraphics[scale=0.3]{filename.ps}
-% ? End of picture
-
-% ? Heading for abstract if used.
-   \vspace{10mm}
-   \begin{center}
-      {\Large\textbf{Abstract}}
-   \end{center}
-% ? End of heading for abstract.
-\end{latexonly}
-
-%  HTML documentation header.
-%  ==========================
-\begin{htmlonly}
-   \xlabel{}
-   \begin{rawhtml} <H1> \end{rawhtml}
-      \stardoctitle\\
-      \stardocversion\\
-      \stardocmanual
-   \begin{rawhtml} </H1> <HR> \end{rawhtml}
-
-% ? Add picture here if required for the hypertext version.
-%   e.g. \includegraphics[scale=0.7]{filename.ps}
-% ? End of picture
-
-   \begin{rawhtml} <P> <I> \end{rawhtml}
-   \stardoccategory\ \stardocnumber \\
-   \stardocauthors \\
-   \stardocdate
-   \begin{rawhtml} </I> </P> <H3> \end{rawhtml}
-      \htmladdnormallink{CCLRC / Rutherford Appleton Laboratory}
-                        {http://www.cclrc.ac.uk} \\
-      \htmladdnormallink{Particle Physics \& Astronomy Research Council}
-                        {http://www.pparc.ac.uk} \\
-   \begin{rawhtml} </H3> <H2> \end{rawhtml}
-      \htmladdnormallink{Starlink Project}{http://www.starlink.ac.uk/}
-   \begin{rawhtml} </H2> \end{rawhtml}
-   \htmladdnormallink{\htmladdimg{source.gif} Retrieve hardcopy}
-      {http://www.starlink.ac.uk/cgi-bin/hcserver?\stardocsource}\\
-
-%  HTML document table of contents.
-%  ================================
-%  Add table of contents header and a navigation button to return to this
-%  point in the document (this should always go before the abstract \section).
-  \label{stardoccontents}
-  \begin{rawhtml}
-    <HR>
-    <H2>Contents</H2>
-  \end{rawhtml}
-  \htmladdtonavigation{\htmlref{\htmladdimg{contents_motif.gif}}
-        {stardoccontents}}
-
-% ? New section for abstract if used.
-  \section{\xlabel{abstract}Abstract}
-% ? End of new section for abstract
-\end{htmlonly}
-
-% -----------------------------------------------------------------------------
-% ? Document Abstract. (if used)
-%  ==================
-\stardocabstract
-% ? End of document abstract
-
-% -----------------------------------------------------------------------------
-% ? Latex Copyright Statement
-%  =========================
-\begin{latexonly}
-\newpage
-\vspace*{\fill}
-\stardoccopyright
-\end{latexonly}
-% ? End of Latex copyright statement
-
-% -----------------------------------------------------------------------------
-% ? Latex document Table of Contents (if used).
-%  ===========================================
-  \newpage
-  \begin{latexonly}
-    \setlength{\parskip}{0mm}
-    \tableofcontents
-    \setlength{\parskip}{\medskipamount}
-    \markboth{\stardocname}{\stardocname}
-  \end{latexonly}
-% ? End of Latex document table of contents
-% -----------------------------------------------------------------------------
-
-\cleardoublepage
-\renewcommand{\thepage}{\arabic{page}}
-\setcounter{page}{1}
 \section{Introduction\xlabel{introduction}}
 
 An ADAM instrumentation system typically consists of a number of
@@ -316,9 +60,10 @@ write tasks which match this idea.
 
 A task is implemented by the application code plus an interface file.
 The interface file is a text file containing declarations of the
-parameters and actions ({\em i.e.} commands) which the task can carry out. The
+parameters and actions (\emph{i.e.} commands) which the task can carry out. The
 source code looks like this
-\small \begin{quote} \begin{verbatim}
+\begin{small}
+\begin{terminalv}
       SUBROUTINE MYTASK ( STATUS )
       INCLUDE 'SAE_PAR'
       INTEGER STATUS
@@ -326,10 +71,11 @@ source code looks like this
       IF ( STATUS .NE. SAI__OK ) RETURN
         do things
       END
-\end{verbatim} \end{quote} \normalsize
+\end{terminalv}
+\end{small}
 
 That is, it appears as a subroutine which is linked into some ADAM code
-called the task {\em fixed-part}.
+called the task \emph{fixed-part}.
 It is conventional to test STATUS on entry and to exit without action if it
 is not equal to SAI\_\_OK. The value SAI\_\_OK is defined in the include file
 SAE\_PAR.
@@ -347,9 +93,11 @@ An ADAM instrumentation application works by telling the ADAM system
 what kind of thing it is expecting to happen by giving it a REQUEST
 through calling TASK\_PUT\_REQUEST.
 
-\small \begin{quote} \begin{verbatim}
+\begin{small}
+\begin{terminalv}
 CALL TASK_PUT_REQUEST(REQUEST,STATUS)
-\end{verbatim} \end{quote} \normalsize
+\end{terminalv}
+\end{small}
 
 and then returning to the code which called it (the task's fixed-part).
 See Appendix \ref{request} for possible values of REQUEST.
@@ -374,16 +122,19 @@ If the fixed-part receives an OBEY <action\_name> command, it checks
 whether the given action\_name has been declared in the interface file.
 If it has, then your code is called. You can find out why your code has
 been called by using the TASK library, for example,
-\small \begin{quote} \begin{verbatim}
+\begin{small}
+\begin{terminalv}
 CALL TASK_GET_NAME(NAME,STATUS)
-\end{verbatim} \end{quote} \normalsize
+\end{terminalv}
+\end{small}
 returns the name of the action.
 
 \section{Carrying out a simple command\xlabel{carrying_out_a_simple_command}}
 
 Suppose your application is very simple, for example, SUMS.IFL contains
 
-\small \begin{quote} \begin{verbatim}
+\begin{small}
+\begin{terminalv}
 interface SUMS
    parameter VALUE
       type '_REAL'
@@ -393,11 +144,13 @@ interface SUMS
       endobey
    endaction
 endinterface
-\end{verbatim} \end{quote} \normalsize
+\end{terminalv}
+\end{small}
 
 and SUMS.FOR contains
 
-\small \begin{quote} \begin{verbatim}
+\begin{small}
+\begin{terminalv}
       SUBROUTINE SUMS ( STATUS )
       IMPLICIT NONE
       INCLUDE 'SAE_PAR'
@@ -410,16 +163,19 @@ and SUMS.FOR contains
       CALL MSG_SETR ( 'ANS', VALUE**2 )
       CALL MSG_OUT ( ' ', 'answer is = ^ANS', STATUS )
       END
-\end{verbatim} \end{quote} \normalsize
+\end{terminalv}
+\end{small}
 
 This can be built as a task called SUMS and loaded using ICL. When it is
 loaded, the fixed-part reads the interface file and discovers that the
 task has just one action, called SQUARE, and one parameter called VALUE.
 If you send a command to it of the form
 
-\small \begin{quote} \begin{verbatim}
+\begin{small}
+\begin{terminalv}
 ICL> send sums obey square
-\end{verbatim} \end{quote} \normalsize
+\end{terminalv}
+\end{small}
 
 then the task will prompt you for VALUE. It will attempt to square your
 reply and then return to the fixed-part. If you send the command again,
@@ -432,7 +188,8 @@ from ICL.
 Let us make the task SUMS able to accept two different commands.
 SUMS.IFL contains
 
-\small \begin{quote} \begin{verbatim}
+\begin{small}
+\begin{terminalv}
 interface SUMS
    parameter VALUE
       type '_REAL'
@@ -446,11 +203,13 @@ interface SUMS
       endobey
    endaction
 endinterface
-\end{verbatim} \end{quote} \normalsize
+\end{terminalv}
+\end{small}
 
 and SUMS.FOR contains
 
-\small \begin{quote} \begin{verbatim}
+\begin{small}
+\begin{terminalv}
       SUBROUTINE SUMS ( STATUS )
       IMPLICIT NONE
       INCLUDE 'SAE_PAR'
@@ -471,27 +230,34 @@ and SUMS.FOR contains
          CALL MSG_OUT ( ' ', 'answer is = ^ANS', STATUS )
       ENDIF
       END
-\end{verbatim} \end{quote} \normalsize
+\end{terminalv}
+\end{small}
 
 As above, you can issue the ICL command
 
-\small \begin{quote} \begin{verbatim}
+\begin{small}
+\begin{terminalv}
 ICL> send sums obey square
-\end{verbatim} \end{quote} \normalsize
+\end{terminalv}
+\end{small}
 
 and you will be prompted for VALUE. Thereafter, that same value of VALUE
 will be used, even if you
 
-\small \begin{quote} \begin{verbatim}
+\begin{small}
+\begin{terminalv}
 ICL> send sums obey add
-\end{verbatim} \end{quote} \normalsize
+\end{terminalv}
+\end{small}
 
 However, notice that the interface file has now been changed to specify that
 VALUE is NEEDed by the actions. This means that you can
 
-\small \begin{quote} \begin{verbatim}
+\begin{small}
+\begin{terminalv}
 ICL> send sums obey add 42
-\end{verbatim} \end{quote} \normalsize
+\end{terminalv}
+\end{small}
 
 and the value 42 is put into the parameter by the fixed-part before your
 application is called.
@@ -507,7 +273,8 @@ a time is required. Note that your code has to find out whether it is
 being called for the first time or not by inquiring the sequence number
 SEQ.
 
-\small \begin{quote} \begin{verbatim}
+\begin{small}
+\begin{terminalv}
 interface timer
    action WAIT
       obey
@@ -533,7 +300,8 @@ endinterface
          CALL MSG_OUT ( ' ', 'finished', STATUS )
       ENDIF
       END
-\end{verbatim} \end{quote} \normalsize
+\end{terminalv}
+\end{small}
 
 The time delay can also be used as a timeout facility in conjunction
 with waiting for input or message receipt.
@@ -542,7 +310,8 @@ It is possible to have several actions active at once, each waiting to
 be called by the fixed-part. Here is a simple example of two actions,
 each doing a timed reschedule.
 
-\small \begin{quote} \begin{verbatim}
+\begin{small}
+\begin{terminalv}
       SUBROUTINE TIMER ( STATUS )
       IMPLICIT NONE
       INCLUDE 'SAE_PAR'
@@ -574,7 +343,8 @@ each doing a timed reschedule.
          ENDIF
       ENDIF
       END
-\end{verbatim} \end{quote} \normalsize
+\end{terminalv}
+\end{small}
 
 Obviously, this application never terminates, but will put out the WAIT
 message every 5 seconds and the WAIT1 message every 1 second.
@@ -612,7 +382,8 @@ handler.
 Let us consider an example task called DO\_IO with an action called READ.
 
 
-\small \begin{quote} \begin{verbatim}
+\begin{small}
+\begin{terminalv}
       SUBROUTINE DO_IO ( STATUS )
       IMPLICIT NONE
       INCLUDE 'SAE_PAR'
@@ -665,7 +436,8 @@ Let us consider an example task called DO\_IO with an action called READ.
       LENGTH = 14
       CALL TASK_ASTMSG ( NAME, LENGTH, VALUE, STATUS )
       END
-\end{verbatim} \end{quote} \normalsize
+\end{terminalv}
+\end{small}
 
 \section{Kicking one action from another
 \xlabel{kicking_one_action_from_another}}
@@ -674,7 +446,8 @@ In some complex instrumentation systems you may wish to have an action in a
 task which wakes other waiting actions within the same task.
 TASK\_KICK(NAME,LENGTH,VALUE,STATUS) may be called to do this.
 
-\small \begin{quote} \begin{verbatim}
+\begin{small}
+\begin{terminalv}
       SUBROUTINE KICKER ( STATUS )
       IMPLICIT NONE
       INCLUDE 'SAE_PAR'
@@ -709,7 +482,8 @@ TASK\_KICK(NAME,LENGTH,VALUE,STATUS) may be called to do this.
          CALL TASK_KICK ( 'WAIT', LENGTH, VALUE, STATUS )
       ENDIF
       END
-\end{verbatim} \end{quote} \normalsize
+\end{terminalv}
+\end{small}
 
 \section{Receipt of messages from other tasks
 \xlabel{receipt_of_messages_from_other_tasks}}
@@ -719,9 +493,11 @@ message to some other task. The other task will carry out its
 operations, maybe generating output intended for the user to see, and
 send your task a final message when it has completed the obey. You can
 use:
-\small \begin{quote} \begin{verbatim}
+\begin{small}
+\begin{terminalv}
 TASK_ADD_MESSINFO(PATH,MESSID,STATUS)
-\end{verbatim} \end{quote} \normalsize
+\end{terminalv}
+\end{small}
 to tell the fixed-part you are
 expecting messages on this PATH,MESSID combination, then return to the
 fixed-part having set a request ACT\_\_MESSAGE. You could also have set a
@@ -729,12 +505,14 @@ timeout as above. You can use multiple calls to TASK\_ADD\_MESSINFO if you
 are controlling more than one operation in other tasks.
 
 When the fixed-part calls your application again, you can use:
-\small \begin{quote} \begin{verbatim}
+\begin{small}
+\begin{terminalv}
 TASK_GET_MESSINFO(PATH,CONTEXT,NAME,VALUE,MESSID,EVENT,STATUS)
-\end{verbatim} \end{quote} \normalsize
+\end{terminalv}
+\end{small}
 to obtain the information carried in the message.
 
-Note that any output generated by the other task ({\em e.g.} using MSG\_OUT)
+Note that any output generated by the other task (\emph{e.g.} using MSG\_OUT)
 will have been handled automatically by the fixed-part of your task and will
 not cause your application subroutine to be called.
 Messages from subsidiary tasks which do cause your subroutine to be called
@@ -742,9 +520,11 @@ will generally be completion messages, however, a special `TRIGGER' message is
 also available.
 
 To send a TRIGGER message the subsidiary task can use:
-\small \begin{quote} \begin{verbatim}
+\begin{small}
+\begin{terminalv}
 TASK_TRIGGER(ACTNAME,VALUE,STATUS)
-\end{verbatim} \end{quote} \normalsize
+\end{terminalv}
+\end{small}
 The message will be sent and the task can continue working.
 
 When your controlling task calls TASK\_GET\_MESSINFO, MESSYS\_\_TRIGGER will
@@ -760,7 +540,8 @@ and a third task controlling them, and is relegated to Appendix \ref{make}.
 It is possible to cancel an action which is in a wait state. Here is a
 simple example.
 
-\small \begin{quote} \begin{verbatim}
+\begin{small}
+\begin{terminalv}
 interface timer
    action WAIT
       obey
@@ -794,19 +575,23 @@ endinterface
          CALL TASK_PUT_REQUEST ( ACT__CANCEL, STATUS )
       ENDIF
       END
-\end{verbatim} \end{quote} \normalsize
+\end{terminalv}
+\end{small}
 
 Note the CANCEL declaration in the interface file. This example is exercised by
 
-\small \begin{quote} \begin{verbatim}
+\begin{small}
+\begin{terminalv}
 ICL> send timer obey wait
 ICL> send timer cancel wait
-\end{verbatim} \end{quote} \normalsize
+\end{terminalv}
+\end{small}
 
 It is possible to write the application such that CANCEL modifies the
 behaviour of the rescheduling action rather than terminating it.
 
-\small \begin{quote} \begin{verbatim}
+\begin{small}
+\begin{terminalv}
 interface timer
    parameter CANTIME
       type '_INTEGER'
@@ -859,13 +644,16 @@ endinterface
          CALL TASK_PUT_REQUEST ( ACT__WAIT, STATUS )
       ENDIF
       END
-\end{verbatim} \end{quote} \normalsize
+\end{terminalv}
+\end{small}
 
 Then:
-\small \begin{quote} \begin{verbatim}
+\begin{small}
+\begin{terminalv}
 ICL> send timer obey wait
 ICL> send timer cancel wait 10000
-\end{verbatim} \end{quote} \normalsize
+\end{terminalv}
+\end{small}
 
 will cause the task to start rescheduling at 0.5sec intervals, but then
 switch to rescheduling at 10sec intervals. In this particular example
@@ -893,7 +681,8 @@ All the parameters of an instrumentation task are available to all the
 actions. In addition, a specific OBEY or CANCEL can specify that values
 of named parameters can be passed on the command line.
 
-\small \begin{quote} \begin{verbatim}
+\begin{small}
+\begin{terminalv}
    action TRYIT
       obey needs TIME
            needs MYVAL
@@ -904,7 +693,8 @@ of named parameters can be passed on the command line.
            needs TIME
       endobey
    endaction
-\end{verbatim} \end{quote} \normalsize
+\end{terminalv}
+\end{small}
 
 The order in which NEEDS declarations occur specifies the order in
 which the values are expected on the command-line.
@@ -932,24 +722,28 @@ told an existing HDS component into which the value should be put.
 \section{Compiling and linking\xlabel{compiling_and_linking}}
 
 Assuming that \texttt{\$ ADAMSTART} has been obeyed to start ADAM, type:
-\small \begin{quote} \begin{verbatim}
+\begin{small}
+\begin{terminalv}
 $ ADAM_DEV
-\end{verbatim} \end{quote} \normalsize
+\end{terminalv}
+\end{small}
 This will define logical names for include files such as SAE\_PAR and ACT\_ERR
 and display the message
 ``\texttt{+ logged in for ADAM program development}''.
 User-code for tasks may now be compiled.
 
 To link instrumentation tasks, type:
-\small \begin{quote} \begin{verbatim}
+\begin{small}
+\begin{terminalv}
 $ ILINK task [qual] [*]
-\end{verbatim} \end{quote} \normalsize
+\end{terminalv}
+\end{small}
 \begin{description}
-\item[task] (mandatory) is the list of user routines, libraries {\em etc.}
+\item[task] (mandatory) is the list of user routines, libraries \emph{etc.}
 required for input to the linker. Note that the ADAM libraries will be
 included automatically. The executable image produced will take its name from
 the first item specified.
-\item[qual] (optional) is any qualifiers required for the linker ({\em e.g.}
+\item[qual] (optional) is any qualifiers required for the linker (\emph{e.g.}
 /DEBUG).
 \item[*] (optional) specify \texttt{*} if it is required to link with ADAM object
 libraries rather than the shareable images. Note that the full ADAM release
@@ -979,7 +773,8 @@ can be found in the following documents.
 
 \subsection{Making tea}
 
-\small \begin{quote} \begin{verbatim}
+\begin{small}
+\begin{terminalv}
 interface test_tea
 #  Test tea task
     parameter param
@@ -1091,11 +886,13 @@ endinterface
       END
 
 
-\end{verbatim} \end{quote} \normalsize
+\end{terminalv}
+\end{small}
 
 \subsection{Making coffee}
 
-\small \begin{quote} \begin{verbatim}
+\begin{small}
+\begin{terminalv}
 interface test_coffee
 #  Test coffee task
     action mocha1
@@ -1158,11 +955,13 @@ endinterface
       ENDIF
       END
 
-\end{verbatim} \end{quote} \normalsize
+\end{terminalv}
+\end{small}
 
 \subsection{Controlling tea and coffee making}
 
-\small \begin{quote} \begin{verbatim}
+\begin{small}
+\begin{terminalv}
 interface test_control
 #  Test control task
     parameter max
@@ -1375,7 +1174,8 @@ endinterface
       ENDIF
       END
 
-\end{verbatim} \end{quote} \normalsize
+\end{terminalv}
+\end{small}
 
 \newpage
 
@@ -1392,7 +1192,8 @@ whether the final completion was due to a CANCEL.
 
 \subsection{Controlling task}
 
-\small \begin{quote} \begin{verbatim}
+\begin{small}
+\begin{terminalv}
 interface cmotask
 #  Motor task controller
    parameter motor
@@ -1480,12 +1281,13 @@ endinterface
       CALL PAR_CANCL ( 'MOTOR', GOOD_STATUS )
 
       END
-
-\end{verbatim} \end{quote} \normalsize
+\end{terminalv}
+\end{small}
 
 \subsection{Controlled task}
 
-\small \begin{quote} \begin{verbatim}
+\begin{small}
+\begin{terminalv}
 interface motask
    parameter filter
       type '_integer'
@@ -1582,7 +1384,8 @@ endinterface
          END IF
       END IF
       END
-\end{verbatim} \end{quote} \normalsize
+\end{terminalv}
+\end{small}
 
 \newpage
 
@@ -1609,7 +1412,7 @@ The characteristics of the new-style ``instrumentation" tasks are as
 follows:
 \begin{itemize}
 \item The arguments previously passed in the call to CD-tasks and D-tasks,
-{\em ie.} CONTEXT, NAME, SEQ, VALUE and RETVAL are now accessed by calls to the
+\emph{ie.} CONTEXT, NAME, SEQ, VALUE and RETVAL are now accessed by calls to the
 TASK routines.
 \item The DTASK library is being phased-out as far as applications are
 concerned. The DTASK\_ calls are replaced by TASK\_ calls.
@@ -1695,7 +1498,7 @@ to have one outstanding at any one time.
 The parameter system does not close-down when an instrumentation task
 action completes. This means that parameters retain their values and
 remain ``active", rather than being returned to the ``ground" state.
-{\em It also means that instrumentation tasks never write global
+\emph{It also means that instrumentation tasks never write global
 associations.}
 This behaviour is similar to the behaviour for D-tasks, but unlike the
 behaviour for CD-tasks.
@@ -1712,7 +1515,7 @@ action name if it is not otherwise specified.
 
 There is a similar distinction between parameter keywords and parameter
 names.
-\small
+\begin{small}
 \begin{center}
 \begin{tabular}{ll}
 ACTKEY=CHARACTER*(PAR\_\_SZNAM)   &  action keyword \\
@@ -1743,9 +1546,9 @@ TIMEOUT=INTEGER                  &  timeout in milliseconds, -1 = infinite \\
 VALUE=CHARACTER*(MSG\_VAL\_LEN)  &  value string \\
 \end{tabular}
 \end{center}
-\normalsize
+\end{small}
 
-\begin{verbatim}
+\begin{terminalv}
 *  Add to the list of active subsidiary actions for an action
 CALL TASK_ADD_MESSINFO ( PATH, MESSID, STATUS )
 Given : PATH, MESSID
@@ -1760,9 +1563,9 @@ Given and returned : STATUS
 CALL TASK_ASTSIGNAL ( ACTNAME, STATUS )
 Given : ACTNAME
 Given and returned : STATUS
-\end{verbatim}
+\end{terminalv}
 \newpage
-\begin{verbatim}
+\begin{terminalv}
 *  Request a task to cancel an action
 CALL TASK_CANCEL ( TASK_NAME, ACTKEY, INVAL, OUTVAL, STATUS )
 Given : TASK_NAME, ACTKEY, INVAL
@@ -1807,9 +1610,9 @@ Returned : PATH, CONTEXT, ACTKEY, VALUE, MESSID, EVENT
 CALL TASK_GET_NAME ( ACTNAME, STATUS)
 Given and returned : STATUS
 Returned : ACTNAME
-\end{verbatim}
+\end{terminalv}
 \newpage
-\begin{verbatim}
+\begin{terminalv}
 *  Get parameter system code for current action name
 CALL TASK_GET_NAMECODE ( NAMECODE, STATUS)
 Given and returned : STATUS
@@ -1856,9 +1659,9 @@ Given and returned : STATUS
 CALL TASK_PUT_SEQ ( SEQ, STATUS )
 Given : SEQ
 Given and returned : STATUS
-\end{verbatim}
+\end{terminalv}
 \newpage
-\begin{verbatim}
+\begin{terminalv}
 *  Set value string for current action
 CALL TASK_PUT_VALUE ( VALUE, STATUS )
 Given : VALUE
@@ -1884,14 +1687,14 @@ Given and returned : STATUS
 CALL TASK_TSTINTFLG ( RESULT, STATUS )
 Given and returned : STATUS
 Returned : RESULT
-\end{verbatim}
+\end{terminalv}
 
 The following generic string-handling routines are provided to help in
 building or interpreting VALUE strings. Each TASK\_xxx$<$T$>$ routine
 represents the set of calls TASK\_xxxC, TASK\_xxxD, TASK\_xxxI, TASK\_xxxL,
 and TASK\_xxxR.
 
-\small
+\begin{small}
 \begin{center}
 \begin{tabular}{ll}
 NDIMS=INTEGER            &    number of dimensions \\
@@ -1904,17 +1707,17 @@ $<$T$>$VALS()=$<$TYPE$>$ &    array being converted \\
 STATUS=INTEGER           &    status \\
 \end{tabular}
 \end{center}
-\normalsize
+\end{small}
 
-\begin{verbatim}
+\begin{terminalv}
 *  Decode a character string as a value
 CALL TASK_DEC0<T> ( STRING, <T>VAL, STATUS )
 Given : STRING
 Given and returned : STATUS
 Returned : <T>VAL
-\end{verbatim}
+\end{terminalv}
 \newpage
-\begin{verbatim}
+\begin{terminalv}
 *  Decode a character string as a vector
 CALL TASK_DEC1<T> ( STRING, MAXVALS, NVALS, <T>VALS, STATUS )
 Given : STRING, MAXVALS
@@ -1944,17 +1747,17 @@ CALL TASK_ENCN<T> ( NDIMS, DIMS, <T>VALS, STRING, STATUS )
 Given : NDIMS, DIMS, <T>VALS
 Given and returned : STATUS
 Returned : STRING
-\end{verbatim}
+\end{terminalv}
 
 The following three generic routines are provided for compatibility with
 earlier ADAM releases. New applications should use the TASK\_ENC calls
 instead.
 
-\begin{verbatim}
+\begin{terminalv}
 CALL TASK_VAL0<T> ( <T>VAL, STRING, STATUS )
 CALL TASK_VAL1<T> ( NVALS, <T>VALS, STRING, STATUS )
 CALL TASK_VALN<T> ( NDIMS, DIMS, <T>VALS, STRING, STATUS )
-\end{verbatim}
+\end{terminalv}
 
 \newpage
 
